# artefact-training-ma-ci-cd

./: .bandit  .dockerignore  .pre-commit-config.yaml  CI_CONFIGURATION.md  Dockerfile  Makefile  README.md  README_template.md  mkdocs.yaml  pyproject.toml  test.pkl
.github/workflows/: cd.yaml  ci.yaml
.skaff/: skaff.yaml
config/: config.py
docs/: style.css
models/: football_model.pkl
src/: app.py  model.py  requirements.txt  setup.py
src/models/: football_model.pkl
tests/: conftest.py  requirements.txt  run_tests.py  test_data_creation.py  test_football_app.py  test_football_model.py
